crates/vaab-syntax/tests/snapshots/parse__an_annotated_binding.snap
---
source: crates/vaab-syntax/tests/parse.rs
expression: "tree(\"let total: Int = 0\\n\")"
---
module
  let total
    declared type
      type Int
    int 0
