crates/vaab-syntax/tests/snapshots/parse__arguments_may_be_spread_over_several_lines.snap
---
source: crates/vaab-syntax/tests/parse.rs
expression: "tree(r#\"\ngreet(\n    \"Ada\",\n    greeting: \"hi\"\n)\n\"#)"
---
module
  call
    callee
      name greet
    argument
      text
        literal "Ada"
    argument greeting:
      text
        literal "hi"
