crates/vaab-syntax/tests/snapshots/parse__comments_are_ignored.snap
---
source: crates/vaab-syntax/tests/parse.rs
expression: "tree(\"# a note\\nlet a = 1 # another note\\n\")"
---
module
  let a
    int 1
